set(target uncenter)
add_executable(${target} ./uncenter.cpp)
target_link_libraries(${target} vpic)
add_test(NAME ${target} COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 1 ${MPIEXEC_PREFLAGS} ./${target})

set(target uncenter_big)
add_executable(${target} ./uncenter.cpp)
target_compile_definitions(${target} PRIVATE NUM_PARTICLES=4194304)
target_link_libraries(${target} vpic)
add_test(NAME ${target} COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 1 ${MPIEXEC_PREFLAGS} ./${target})

set(target uncenter_sorted)
add_executable(${target} ./uncenter.cpp)
target_compile_definitions(${target} PRIVATE ENABLE_SORT=1)
target_link_libraries(${target} vpic)
add_test(NAME ${target} COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 1 ${MPIEXEC_PREFLAGS} ./${target})

set(target uncenter_sorted_threaded)
add_executable(${target} ./uncenter.cpp)
target_compile_definitions(${target} PRIVATE NUM_THREADS=4)
target_link_libraries(${target} vpic)
add_test(NAME ${target} COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 1 ${MPIEXEC_PREFLAGS} ./${target})
